Settings for font recognition

--- a/website/views/guild.ejs
+++ b/website/views/guild.ejs
@@ -51,6 +51,8 @@
         <input type="checkbox" typed='boolean' setting='invites'></div>
       <div><h3 title="Whether to censor multiple messages combined together to scan.">Multi-Line</h3>
         <input type="checkbox" typed='boolean' setting='multi' premium></div>
+      <div><h3 title="Whether to read fonted letters as normal letters. (BETA)">Font Recognition</h3>
+        <input type="checkbox" typed='boolean' setting='fonts' premium></div>
       <div><h3 title="Sets what filters the base filter uses">Pre-Built Filters</h3>
         <input placeholder="Add Filters" typed="tagArray" setting="filters"></div>
       <div><h3 title="Custom filter that are bound to this server.">Server Filter</h3>
