--- a/website/views/guild.ejs
+++ b/website/views/guild.ejs
@@ -87,16 +87,23 @@
         <select typed="list" disabled setting="punishment.role" roles>
           <option value="null">None</option>
         </select></div>
-      <div>
+      <div setting="punishment.time" typed="multiples">
         <h3>Unpunish After</h3>
-        <div setting="punishment.time" typed="multiples">
-          <input placeholder="Never" type="number" min="0" max="60" base>
-          <select multiply>
-            <option value="60000">Minutes</option>
-            <option value="3600000">Hours</option>
-            <option value="86400000">Days</option>
-          </select>
-        </div>  
+        <input placeholder="Never" type="number" min="0" max="60" base>
+        <select multiply>
+          <option value="60000">Minutes</option>
+          <option value="3600000">Hours</option>
+          <option value="86400000">Days</option>
+        </select>
+      </div>
+      <div setting="punishment.expires" typed="multiples">
+        <h3>Warnings Expire After</h3>
+        <input placeholder="Never" type="number" min="0" max="60" base>
+        <select multiply>
+          <option value="60000">Minutes</option>
+          <option value="3600000">Hours</option>
+          <option value="86400000">Days</option>
+        </select>
       </div>
       </section>
     <section id="other">
