Make ignore nsfw channels toggleable

--- a/website/views/guild.ejs
+++ b/website/views/guild.ejs
@@ -116,6 +116,9 @@
         <button onclick="document.getElementById('popMessageInput').value='Default'">Default</button>
         <button onclick="document.getElementById('popMessageInput').value='Off'">Off</button></div>
 
+      <div><h3>Ignore NSFW Channels</h3>
+        <input type="checkbox" typed="boolean" setting="nsfw"></div>
+
         <div>
           <h2>Resend</h2>
           <div><h3 title="Resend someone censored message with the message censored in a spoiler.">Toggle</h3>
