Add stars as option for resend replace

--- a/website/views/guild.ejs
+++ b/website/views/guild.ejs
@@ -128,7 +128,8 @@
           <div><h3 title="What to replace/cover curses with when Separate is enabled.">Seperate Replace</h3> 
             <select typed="typeNum" setting="webhook.replace" premium>
               <option value="0">Spoilers</option>
-              <option value="1">Hashtags</option>
+              <option value="1">Hashtags (#)</option>
+              <option value="2">Stars (*)</option>
             </select></div>
         </div>
       </section>
