Add config for dm responses

--- a/website/views/guild.ejs
+++ b/website/views/guild.ejs
@@ -44,6 +44,8 @@
         </select></div>
       <div><h3 title="Ignore specific channels without having to make it NSFW.">Ignore Channels</h3>
         <input placeholder="Add Channels" typed="tagArray" setting="channels" premium></div>
+      <div><h3>DM Command Responses</h3>
+        <input type="checkbox" typed="boolean" setting="dm" premium></div>
     </section>
     <section id="filter">
       <h1>Filter</h1>
