--- a/website/views/base.ejs
+++ b/website/views/base.ejs
@@ -1,7 +1,7 @@
 <div id="bar">
   <div id="logo">
     <a href="/">
-      <img src="/static/censorbot.png">
+      <img src="/static/censorbot.png" alt="Censor Bot">
     </a>
   </div>
   <h2 id="title">Censor Bot</h2>
