--- a/website/views/header.ejs
+++ b/website/views/header.ejs
@@ -20,3 +20,5 @@
   <meta property="og:title" content="Censor Bot">
   <meta property="og:description" content="Easy to use advanced content filtering for your Discord server(s)!">
 <% } %>
+
+<meta name="description" content="Advanced Anti-Swear Bot that comes with a pre-built filters, no work needed! anti swear bot">
