--- a/website/views/premium.ejs
+++ b/website/views/premium.ejs
@@ -23,7 +23,7 @@
           <button onclick="window.open('https://patreon.com/censorbot')">Get premium</button>
           <h1 class="notice">Premium Features</h1>
           <section>
-            <h2>Mutli-Line</h2>
+            <h2>Multi-Line</h2>
             <p>
               Multi-Line allows the bot to pickup multiple messages stacked ontop of eachother.
             </p>
