--- a/website/static/css/guild.css
+++ b/website/static/css/guild.css
@@ -49,6 +49,15 @@ section > h1 {
   grid-area: other
 }
 
+.needed {
+  border: 1px red solid;
+  border-radius: 4px
+}
+
+.needed:focus {
+  outline: none;
+}
+
 @media screen and (max-width: 900px) {
   #settings {
     grid-template-columns: repeat(1, 1fr) !important;
