Add reviews links

--- a/website/views/index.ejs
+++ b/website/views/index.ejs
@@ -63,11 +63,10 @@
 					  	together to keep YOUR server clean!
             </p>
           </section>
-          
-          <h1 class="notice">Commands</h1>
-          <div style="overflow: hidden; padding-top: 56.25%; position: relative">
-            <iframe src="https://api.jt3ch.net/censorbot/cmd" style="border: 0; height: 100%; left: 25%; position: absolute; top: 0; width: 50%"></iframe>
-          </div>
+          <br /><br />
+
+          <h4>Let us know what you think! Leave a review <a href="/review" target="_blank">here</a></h4>
+          <i>Please do not review with issues with the bot, first join the <a href="/support">support server</a> and ask for help!</i>
         </center>
       </div>
     </div>
