--- a/website/static/css/index.css
+++ b/website/static/css/index.css
@@ -6,6 +6,12 @@
   --topbar: #242e3b;
   --topbaralt: #1a212b;
   --background: #2d4059;
+
+  --duration: 0.4s
+}
+
+::placeholder {
+  color: var(--mainalt)
 }
 
 h1.important {
@@ -102,8 +108,8 @@ nav > h3 {
   cursor: default;
 }
 
-.button[selected] {
-  cursor: default
+.button:active {
+  opacity: 0.5;
 }
 
 .button:not([disabled]):not([selected]):hover {
@@ -117,15 +123,15 @@ nav > h3 {
 }
 .button.special:hover {
   transition: 0.2s;
-  background-color: var(--mainalt);
+  background-color: var(--mainalt) !important;
 }
 
 #root {
-  transition: 1s
+  transition: 0.5s
 }
 
 #root.loading {
-  transition: 1s;
+  transition: 0.5s;
   opacity: 0
 }
 
@@ -159,4 +165,110 @@ nav > h3 {
   animation-duration: 1.5s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
+}
+
+#discord {
+  background-color: #7289DA;
+}
+
+#twitch {
+  background-color: #6441A4;
+}
+
+#premium {
+  background-color: #FF424D;
+}
+
+/** inputs **/
+
+input, select {
+  background-color: var(--topbaralt);
+  border: 2px var(--topbar) solid;
+  outline: unset;
+  color: var(--mainalt);
+  padding: 5px;
+  -webkit-appearance: none;
+}
+
+.tagify {
+  color: var(--mainalt);
+  text-align: left;
+  border: 2px var(--topbaralt) solid !important;
+
+  --tag-bg: var(--topbaralt) !important;
+  --tag-hover: var(--topbaralt) !important;
+  --tag-text-color: var(--mainalt) !important;
+}
+
+.tagify__input::before {
+  color: var(--maintalt) !important;
+}
+
+.tagify__dropdown__wrapper {
+  background: var(--topbar) !important;
+  border: 1px solid var(--topbaralt) !important;
+}
+
+.tagify__dropdown__item--active {
+  background: var(--topbaralt) !important;
+}
+
+.checker {
+  display: block;
+  font-size: 2em;
+  height: 34px;
+  width: 73.75px;
+  box-sizing: content-box;
+  padding: 0.15em;
+  border-radius: 0.25em;
+  transition: transform var(--duration) ease;
+  cursor: pointer;
+  margin: auto;
+  background-color: var(--topbaralt);
+}
+
+.checkmark {
+  width: 34px;
+  height: 34px;
+  transition: transform var(--duration) ease;
+  transform: translateX(-0.4em);
+  z-index: 5;
+}
+.checkmark svg {
+  display: block;
+  background: var(--background);
+  transform: translateX(0.4em);
+  border-radius: 0.15em;
+  transition: background-color var(--duration) ease, transform calc(var(--duration) * 1.5) ease;
+}
+.checkmark svg path {
+  stroke-dasharray: 90 90;
+  stroke-dashoffset: 90;
+  transition: stroke-dashoffset calc(var(--duration) / 3) linear calc(var(--duration) / 3);
+}
+
+.checkbox {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.4;
+  visibility: hidden;
+}
+.checkbox:checked ~ .checkmark {
+  transform: translate(52px);
+}
+.checkbox:checked ~ .checkmark svg {
+  background: #77c44c;
+  transform: translate(-0.4em);
+}
+.checkbox:checked ~ .checkmark svg path {
+  stroke-dashoffset: 0;
+}
+
+.checker.checker:active {
+  transition-duration: calc(var(--duration) / 2);
+}
+.checker.checker:active .check-bg::before {
+  transform: translateY(0) scale(0.8);
+  opacity: 0.2;
 }
