--- a/website/static/css/guild_settings.css
+++ b/website/static/css/guild_settings.css
@@ -4,8 +4,8 @@
   grid-template-rows: repeat(3, 1fr);
   grid-template-areas:
     "general general filter filter"
-    "punishments punishments filter filter"
-    ". other other ."
+    "other other filter filter"
+    ". punishments punishments ."
 }
 
 #settings > section {
@@ -15,39 +15,95 @@
   padding: 20px;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(33%, 1fr));
-  grid-template-areas: "name name name";
 }
 
-#settings > section > h1 {
+#settings > section > h1, #settings > section > h2 {
   text-decoration: underline;
   margin: 0px 100px 20px 100px;
-  grid-area: name;
 }
 
-#general {
+#settings > section > h1, #settings > section > h2,
+#channels, #filters, #filter, #uncensor {
+  grid-column: span 3;
+  margin-top: 20px;
+  user-select: none;
+} 
+
+#settings > section > div > h3 {
+  user-select: none;
+}
+
+.general {
   grid-area: general;
 }
 
-#filter {
+.filter {
   grid-area: filter;
 }
 
-#punishments {
+.punishments {
   grid-area: punishments;
+  grid-template-rows: repeat(2, 0fr) !important;
+  height: fit-content;
 }
 
-#other {
+.punishments > ul {
+  font-size: 1.7em;
+}
+
+#settings > section > ul {
+  text-align: left;
+  grid-column: span 3;
+  margin: auto;
+}
+
+.other {
   grid-area: other;
 }
 
-#channels, #filters {
-  grid-column: span 3;
+#settings .button {
+  background-color: var(--topbaralt);
+}
+#settings .button:hover {
+  opacity: 0.5;
+}
+#settings .button:active {
+  opacity: 0.3;
+}
+
+#prefix > input {
+  width: 70px;
+}
+
+h1 {
+  font-size: 2em;
+}
+
+#save {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  z-index: 10;
+  font-size: 50px;
+  background-color: var(--secondary);
+  transition: bottom 0.3s ease-out;
+  display: block;
+}
+
+#save:hover {
+  opacity: 0.8;
+  transition: 0.3s;
+}
+
+#save[hidden] {
+  bottom: -100px;
+  transition: bottom 0.5s ease-out;
 }
 
 @media (max-width: 750px) {
   #settings {
     grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(auto-fill, minmax(100px, 520px));
     grid-template-areas:
       "general"
       "filter"
@@ -59,6 +115,13 @@
 @media (max-width: 1050px) {
   #settings > section {
     grid-template-columns: repeat(auto-fill, minmax(50%, 1fr));
-    grid-template-areas: "name name";
+  }
+
+  #settings > section > h1, #settings > section > h2,
+  #channels, #filters, #filter, #uncensor {
+    grid-column: span 2;
+  } 
+  #settings > section > ul {
+    grid-column: span 2;
   }
 }
