--- a/website/static/css/dashboard_home.css
+++ b/website/static/css/dashboard_home.css
@@ -46,6 +46,8 @@
   width: 100px;
   height: 100px;
   border-radius: 50%;
+  -webkit-user-drag: none;
+  user-select: none;
 }
 #guilds > a > h2 {
   background-color: #36393f;
