--- a/website/static/css/admin.css
+++ b/website/static/css/admin.css
@@ -1,12 +1,9 @@
-#root {
-  margin: 0px 10vw;
-}
-
 #admin {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(25%, 1fr));
   grid-template-rows: repeat(auto-fill, minmax(300px, 1fr));
   grid-gap: 1vw;
+  margin: 0px 10vw;
 }
 
 #admin > div {
@@ -19,19 +16,36 @@
 #admin > div > div {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(auto-fill, minmax(100px, 1fr));
+  grid-template-rows: repeat(auto-fill, minmax(150px, 1fr));
   margin-bottom: 13px;
-}
-
-#admin > div > div > div > p {
-  margin: 5px;
+  grid-gap: 1rem;
+  margin: 10px;
 }
 
 #admin > div > div > div {
-  display: inline-block;
-  border: 1px solid;
-  margin: 10px;
-  padding: 1px 5px;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-areas:
+   "name"
+   "info"
+   "restart";
+   border: 1px solid;
+}
+
+#admin > div > div > div > p {
+  grid-area: name;
+}
+
+#admin > div > div > div > div {
+  grid-area: info
+}
+
+#admin > div > div > div > a {
+  grid-area: restart;
+  width: fit-content;
+  height: fit-content;
+  margin: auto;
 }
 
 #admin > div > div > div[state="0"] {
